--- a/src/package.json
+++ b/src/package.json
@@ -37,6 +37,9 @@
   },
   "dependencies": {
     "@craco/craco": "^5.6.4",
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -44,8 +47,10 @@
     "craco-less": "^1.17.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dnd": "^14.0.3",
     "react-dnd-html5-backend": "^14.0.1",
+    "react-dnd-touch-backend": "^14.1.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
