--- a/src/package.json
+++ b/src/package.json
@@ -52,6 +52,7 @@
     "react-dnd-html5-backend": "^14.0.1",
     "react-dnd-touch-backend": "^14.1.0",
     "react-dom": "^16.13.1",
+    "react-dragtastic": "^2.4.3",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
     "serve": "^12.0.0",
