--- a/src/package.json
+++ b/src/package.json
@@ -28,6 +28,8 @@
     "antd": "^4.6.1",
     "autoprefixer": "^9.8.6",
     "babel-plugin-import": "^1.13.0",
+    "copy-webpack-plugin": "^9.0.1",
+    "file-loader": "^6.2.0",
     "postcss": "^8.2.9",
     "postcss-cli": "^7.1.1",
     "postcss-import": "^12.0.1",
@@ -49,13 +51,13 @@
     "react": "^16.13.1",
     "react-beautiful-dnd": "^13.1.0",
     "react-dnd": "^14.0.3",
-    "react-dnd-html5-backend": "^14.0.1",
     "react-dnd-mouse-backend": "^1.0.0-rc.2",
     "react-dnd-preview": "^6.0.2",
-    "react-dnd-touch-backend": "^14.1.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
+    "react-toastify": "^8.0.2",
+    "react-transition-group": "^4.4.2",
     "serve": "^12.0.0",
     "serve-static": "^1.14.1"
   }
